# nexagent

./: .gitignore  .replit  =20.7  README.md  create_shortcut.vbs  fix_config.ps1  mkshortcut.vbs  nexagent_config.ini  nexagent_start.bat  nexagent_status.bat  nexagent_stop.bat  pyproject.toml  test_gemini.py  test_models.py
.agents/: agent_assets_metadata.toml
.github/workflows/: tests.yml
SshRemote_V2/: README_EN.txt
attached_assets/: Pasted--2026-05-17-10-17-PM-n8n-1-5-NexAgent--1779046352144_1779046352146.txt  Pasted--Python-Desktop-Bot-NexAgent--1779050132061_1779050132062.txt  Pasted--Python-NexAgent-pc-commander--1779051439632_1779051439633.txt
pc-commander/: .gitignore  CHANGELOG.md  DOCS.md  INSTALL_AR.txt  INSTALL_EN.txt  LICENSE.txt  build.bat  create_icon.py  install.bat  main.py  nexagent_config.ini.template  requirements.txt  run_headless.py  uninstall.bat
pc-commander/core/: README_AR.txt  README_EN.txt  setup_v2.bat  show_port_v2.bat  sshremote_config.ini.template  sshremote_key.pub  sshremote_tunnel_v2.ps1  start_tunnel_v2.bat  stop_tunnel_v2.bat  uninstall_v2.bat
pc-commander/installer/: setup.iss
pc-commander/pre_login/: SETUP_PRE_LOGIN_AR.txt  install_pre_login.bat  pre_login_agent.py  pre_login_config.json  uninstall_pre_login.bat
pc-commander/scripts/: bump_version.py
pc-commander/src/: main_service.py
pc-commander/tests/: test_commands.py  test_config.py  test_file_manager.py  test_security_auth.py  test_ssh_executor.py  test_vpn_manager.py  test_watchdog.py
pc-commander/wol_agent/: SETUP_ANDROID_AR.txt  (+2 more)
scripts/: post-merge.sh
(+35 files in other folders)
