[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "cryptography>=48.0.0",
    "flask>=3.1.3",
    "google-generativeai>=0.8.6",
    "gtts>=2.5.4",
    "openai>=2.38.0",
    "paramiko>=5.0.0",
    "pillow>=12.2.0",
    "plyer>=2.1.0",
    "psutil>=7.2.2",
    "pyngrok>=8.1.2",
    "pyperclip>=1.11.0",
    "python-docx>=1.2.0",
    "python-telegram-bot>=22.7",
    "requests>=2.34.2",
    "speechrecognition>=3.16.1",
    "werkzeug>=3.1.8",
]
